# maverick-private

./: .gitignore  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: cursor.plugin.json
agents/: code-reviewer.md  issue-analyst.md  issue-planner.md  maverick.md  tech-docs-writer.md
cli/: build_ami.py  cli.py  config.py  init.py  instance.py  plugin.py  worker.py
cli/cloud_init/: cloud-config.yaml
docs/: alerting-standards.md  architecture.md  cicd.md  claude-code-error-handling-and-recovery.md  claude-code-workers.md  code-review.md  comprehensive-testing.md  git-workflow.md  llm-containment.md  logging-standards.md  maverick-build.md  overview.md  references.md  scope-boundaries.md  security-review.md  vibe-coders.md
scripts/: validate-skills.py
skills/alerting-bestpractice/: SKILL.md
skills/cicd-azure/: SKILL.md
skills/cicd-bestpractice/: SKILL.md
skills/cicd-github/: SKILL.md
skills/cicd-gitlab/: SKILL.md
skills/claude-code-recovery/: SKILL.md
skills/create-implementation-plan/: SKILL.md
skills/create-solution-design/: SKILL.md
skills/do-issue-guided/: SKILL.md
skills/do-issue-solo/: SKILL.md  SKILL.template
skills/git-workflow/: SKILL.md
skills/github-issue-workflow/: SKILL.md
skills/init/: SKILL.md
skills/install/: SKILL.md  install.sh
skills/integration-testing-bestpractice/: SKILL.md
skills/linting-bestpractice/: SKILL.md
skills/local-verification/: SKILL.md
skills/logging-bestpractice/: SKILL.md
skills/mav-bp-alerting/: SKILL.md
skills/mav-bp-cicd-azure/: SKILL.md
(+176 files in other folders)
