[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "maverick"
version = "0.1.0"
description = "Claude Code plugin that enables autonomous AI development while maintaining best practices"
requires-python = ">=3.10"
dependencies = ["boto3"]

[project.scripts]
maverick = "maverick.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"maverick.cloud_init" = ["**/*.yaml"]

[tool.uv.workspace]
members = [
    "prototyping/my-python-app",
]
